[tool.poetry]
name = "ip_check"
version = "0.1.0"
description = ""
authors = ["azat715 <azat715@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.3.1"
requests = "^2.25.1"
SQLAlchemy = "^1.3.22"
SQLAlchemy-Utils = "^0.36.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.7.0"

[tool.poetry.scripts]
ip_check = "ip_check.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
